@@ -32,17 +32,17 @@
 /**
  * Inspekt_Error
  */
-require_once('Inspekt/Error.php');
+require_once('include/Inspekt/Error.php');
 
 /**
  * Inspekt_Cage
  */
-require_once('Inspekt/Cage.php');
+require_once('include/Inspekt/Cage.php');
 
 /**
  * Inspekt_Supercage
  */
-require_once('Inspekt/Supercage.php');
+require_once('include/Inspekt/Supercage.php');
 
 
 /**
