@@ -31,9 +31,7 @@ function cpgGetMicroTime()
 }
 $cpg_time_start = cpgGetMicroTime();
 
-set_include_path(get_include_path().PATH_SEPARATOR.dirname(__FILE__).PATH_SEPARATOR.dirname(__FILE__).DIRECTORY_SEPARATOR.'Inspekt');
-
-require_once('Inspekt.php');
+require_once('include/Inspekt.php');
 
 // Set $strict to false to make the superglobals available
 $strict = TRUE;
